# Docling-Studio

./: .dockerignore  .env.example  .gitignore  .trivyignore.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.ingestion.yml  docker-compose.yml  mkdocs.yml  nginx.conf  nginx.conf.template
docs/: index.md  (+5 more)
document-parser/: .dockerignore  Dockerfile  conftest.py  main.py  pyproject.toml  requirements-local.txt  requirements-reasoning.txt  requirements-test.txt  requirements.txt
document-parser/api/: analyses.py  document_edits.py  documents.py  graph.py  ingestion.py  reasoning.py  schemas.py
document-parser/data/: docling_studio.db
document-parser/domain/: bbox.py  hashing.py  models.py  parsing.py  ports.py  services.py  value_objects.py  vector_schema.py
document-parser/infra/: bbox.py  docling_agent_reasoning.py  docling_graph.py  docling_tree.py  local_chunker.py  local_converter.py  opensearch_store.py  rate_limiter.py  serve_converter.py  settings.py
document-parser/persistence/: analysis_repo.py  database.py  document_edit_repo.py  document_repo.py
document-parser/scripts/: export_docling_document_schema.py
document-parser/services/: analysis_service.py  chunk_service.py  document_edit_service.py  document_service.py  ingestion_service.py  store_service.py
document-parser/tests/: test_analysis_service.py  test_api_endpoints.py  test_architecture.py  test_bbox.py  test_chunk_service.py  test_chunking.py  test_docling_agent_reasoning.py  test_docling_graph.py  test_document_edit_service.py  test_document_service.py  test_graph_api.py  test_hashing.py  test_ingestion_api.py  test_ingestion_service.py  test_migrate_06.py  test_models.py  test_neo4j_chunk_writer_assertion.py  test_ollama_provider.py  test_opensearch_store.py  test_pipeline_options.py  test_rate_limiter.py  test_reasoning_api.py  test_repos.py  test_robustness.py  test_schemas.py  test_serve_converter.py  test_settings.py  test_store_service.py  test_vector_schema.py  test_vector_store_port.py
embedding-service/: Dockerfile  pyproject.toml
(+289 files in other folders)
