[project]
name = "document-parser"
version = "0.0.0"
description = "Docling Studio FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "docling-core[chunking]>=2.0.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "python-multipart>=0.0.12",
  "pdf2image>=1.17.0,<2.0.0",
  "pillow>=10.0.0,<11.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pypdfium2>=4.0.0,<5.0.0",
  "opensearch-py[async]>=2.6.0,<3.0.0",
  "neo4j>=5.15.0,<6.0.0",
  "cryptography>=43.0.0,<46.0.0",
  "docling-agent==0.1.0",
  "mellea==0.4.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "pytestarch>=2.0.0,<3.0.0",
  "ruff>=0.11.0,<1.0.0",
]
local = [
  "docling>=2.80.0,<3.0.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "RUF",  # ruff-specific
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
  "N815",   # camelCase in Pydantic models (intentional — matches frontend API contract)
  "TC003",  # datetime import used at runtime by Pydantic
]

[tool.ruff.lint.isort]
known-first-party = ["api", "domain", "persistence", "services"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
