[project]
name = "embedding-service"
version = "0.0.0"
description = "Docling Studio sentence-transformers embedding service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "sentence-transformers>=3.0.0,<4.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[tool.uv]
package = false
